# ShortTemplate

./: .gitignore  gbkShiftjis.py  ogg2wav.bat  webm2webp.py
Node/: binaryReadWrite.js
Node/orcq/: LICENSE  package-lock.json  package.json  tsconfig.json
Node/orcq/src/: db.ts  index.ts
Node/orcq/src/command/: !help.ts  !sgl.ts
Node/orcq/src/command/!cats/: memes.ts
Node/orcq/src/command/!r/: index.ts  rd.ts  reward.ts  utils.ts
Node/orcq/src/context/: index.ts
Node/orcq/src/utils/: cache.ts
Python/: Img2Char.py  README.md  _timeout.py  imgConvert.py  input.py  path.py  setup.cfg  win.bat
Python/img2Bit/: main.py
Python/img2Char/: main.py  win.bat
image_convert/: _timeout.py  imgConvert.py  path.py
image_convert/img2Bit/: main.py  win.bat
image_convert/img2Char/: main.py
orcq/: .gitignore  package-lock.json  package.json
orcq/src/: index.ts  thread.ts
orcq/src/command/: !epic.ts  !help.ts  !hs_search.ts  !mtg_search.ts  index.ts
orcq/src/command/!cats/: index.ts
orcq/src/command/!steam/: index.ts  top10.ts
orcq/src/context/: msg_handler.ts  recv.ts  resp.ts
orcq/src/utils/: annotation.ts  matchLimit.ts  safeAssign.ts
