[metadata]
name = PY_Samples
license = MIT
long_description = file: README.md

[options]
python_requires = >= 3.8
packages = find:
setup_requires =
    setuptools
    wheel
install_requires = 
    pillow

[options.entry_points]
console_scripts = 
    img2Char = img2Char.main:main
    img2Bit = img2Bit.main:main

[yapf]
based_on_style = yapf
BLANK_LINE_BEFORE_CLASS_DOCSTRING = True
COLUMN_LIMIT = 120
JOIN_MULTIPLE_LINES = True
SPACES_BEFORE_COMMENT = 4
SPLIT_PENALTY_BEFORE_IF_EXPR = True
